--- a/.gitmodules
+++ b/.gitmodules
@@ -194,3 +194,9 @@
 [submodule "vim/bundle/syntax-cjsx"]
 	path = vim/bundle/syntax-cjsx
 	url = https://github.com/mtscout6/vim-cjsx
+[submodule "upstreams/ndenv"]
+	path = upstreams/ndenv
+	url = https://github.com/riywo/ndenv
+[submodule "ndenv/plugins/node-build"]
+	path = ndenv/plugins/node-build
+	url = https://github.com/riywo/node-build
