--- a/.gitmodules
+++ b/.gitmodules
@@ -200,3 +200,6 @@
 [submodule "ndenv/plugins/node-build"]
 	path = ndenv/plugins/node-build
 	url = https://github.com/riywo/node-build
+[submodule "vim/bundle/syntax-css3"]
+	path = vim/bundle/syntax-css3
+	url = https://github.com/hail2u/vim-css3-syntax
