--- a/.gitmodules
+++ b/.gitmodules
@@ -203,3 +203,6 @@
 [submodule "vim/bundle/liquid"]
 	path = vim/bundle/liquid
 	url = https://github.com/tpope/vim-liquid
+[submodule "rbenv/plugins/rbenv-default-gems"]
+	path = rbenv/plugins/rbenv-default-gems
+	url = gh:sstephenson/rbenv-default-gems.git
