--- a/.gitmodules
+++ b/.gitmodules
@@ -206,3 +206,6 @@
 [submodule "rbenv/plugins/rbenv-default-gems"]
 	path = rbenv/plugins/rbenv-default-gems
 	url = gh:sstephenson/rbenv-default-gems.git
+[submodule "vim/bundle/pipe"]
+	path = vim/bundle/pipe
+	url = git@github.com:krisajenkins/vim-pipe.git
