vim - Switch back to upstream for vim-ruby plugin
I'd already abandoned my own changes so switch back to using the
upstream repository, pulling in a number of changes.

* vim/bundle/ruby 2597860...ef2deea (39):
  > Remove "/" from list of allowed characters before `if`
  > Merge pull request #257 from 0x0dea/percent_iI
  > Fix block indenting with assignment on MSL
  > More complicated matchit end-pattern
  > Spellchecking strings with a setting
  > Revert "Letting VIM spell check regular strings"
  > Merge pull request #240 from roryokane/eruby-indent-sw-0
  > Set correct "shiftwidth" value
  > Support Rails html+tablet style extensions
  > Merge pull request #233 from ceigel/master
  > Fix minor typo
  > Fix issue with bracket continuations
  > Merge branch 'i17'
  > Deal with continuations in conditions
  > Merge pull request #216 from filipebarcos/add_support_to_cap_files
  > Make <SID>foldopen buffer local
  > Revert "Fix jump to tag"
  > Fix jump to tag
  > Make Foo and Foo() both highlight as constants
  > compiler/rake.vim: Explicitly capture erros and -T output
  > Remove ineffective fold open on preview window
  > Open folds on tag jump
  > Revert accidentally committed code
  > Shell escape PATH
  > Give symbol key highlighting highest precedence
  > Don't set filetype twice
  > Example compilers for avoiding testrb
  > Make two related patterns consistent
  > Fix issue with required keyword args
  > Also skip matchit matches that are regexes
  > Merge pull request #204 from glucero/master
  > Merge pull request #197 from robertomiranda/rails-4
  > Merge pull request #192 from jvirtanen/features/cocoapods
  > Remove Gem installation infrastructure
  > Apply real fix for Andy Wokula's HTML indent
  > Merge pull request #196 from rbright/master
  > Merge pull request #194 from bk2204/highlight-regex-in-hash-key
  > Leading dots for method calls
  > Special rules for `def` as an indent keyword

--- a/.gitmodules
+++ b/.gitmodules
@@ -58,7 +58,7 @@
 	url = https://github.com/pangloss/vim-javascript.git
 [submodule "vim/bundle/ruby"]
 	path = vim/bundle/ruby
-	url = https://github.com/aschrab/vim-ruby.git
+	url = https://github.com/vim-ruby/vim-ruby.git
 [submodule "vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
