ssh - Some config for systems at Raritan

--- a/ssh/config
+++ b/ssh/config
@@ -37,4 +37,14 @@ Host lish
 User qqx
 HostName lish-atlanta.linode.com
 
+Host *.raritan.com 192.168.42.* aarons-nerve
+ForwardAgent yes
+
+Host nerve-proxy
+HostName aarons-nerve
+HostKeyAlias aarons-nerve
+ForwardAgent yes
+LocalForward localhost:5432  localhost:5432
+LocalForward localhost:61613 localhost:61613
+
 # vim: ft=sshconfig
