--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,6 @@ bind -n C-\ if "expr '#{pane_title}' : 'Vim@.*'" 'send-keys C-\' 'select-pane -l
 bind C-l send-keys 'C-l'
 
 bind-key '|'   split-window -h
-if '[ -f /mach_kernel ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
+if '[ -c /dev/machtrace ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
 #new-session -s dflt
