--- a/tmux.conf
+++ b/tmux.conf
@@ -51,5 +51,7 @@ bind C-l send-keys 'C-l'
 
 bind-key '|'   split-window -h
 if '[ -c /dev/machtrace ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
+if '[ -c /dev/machtrace ]' 'bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"'
+if '[ -c /dev/machtrace ]' 'bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"'
 
 #new-session -s dflt
