tmux - Turn on mouse support
Mainly want this so that I can use mouse for scrolling, but since that
requires that tmux enables mouse support I might as well enable other
mouse options too.

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,14 +21,14 @@ if '[ -x /bin/zsh ]' 'set -g default-shell /bin/zsh'
 
 set-window-option -g xterm-keys on
 set-window-option -g mode-keys vi
-set-window-option -g mode-mouse off
+set-window-option -g mode-mouse on
 set-window-option -g automatic-rename off
 set-window-option -g aggressive-resize on
 set-window-option -g alternate-screen off
 
-set -g mouse-select-window off
-set -g mouse-select-pane   off
-set -g mouse-resize-pane   off
+set -g mouse-select-window on
+set -g mouse-select-pane   on
+set -g mouse-resize-pane   on
 
 set -g repeat-time 1000
 bind-key Up    select-pane -U
