--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 set -g prefix C-o
+set -g prefix2 C-Space
 bind o send-prefix
 bind C-o last-window
 bind Space next-window
@@ -49,7 +50,10 @@ bind -n C-\ if "expr '#{pane_title}' : 'Vim@.*'" 'send-keys C-\' 'select-pane -l
 
 bind C-l send-keys 'C-l'
 
-bind-key '|'   split-window -h
+bind c   new-window   -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind '|' split-window -c "#{pane_current_path}" -h
+
 if '[ -c /dev/machtrace ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 if '[ -c /dev/machtrace ]' 'bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"'
 if '[ -c /dev/machtrace ]' 'bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"'
