vim - Use PatienceDiff for vimdiff mode
Add enhanced diff plugin, and configure it to use PatienceDiff by
default.  Can produce much more readable diffs.

http://bryanpendleton.blogspot.com/2010/05/patience-diff.html

--- a/.gitmodules
+++ b/.gitmodules
@@ -206,3 +206,6 @@
 [submodule "vim/bundle/git-gutter"]
 	path = vim/bundle/git-gutter
 	url = git://github.com/airblade/vim-gitgutter.git
+[submodule "vim/bundle/diff-enhanced"]
+	path = vim/bundle/diff-enhanced
+	url = git@github.com:chrisbra/vim-diff-enhanced.git
