tmux - increase history limit
Default value doesn't store enough to see the information about Ruby
backtraces in Rails projects due to all of the loaded Gems.

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,7 @@ set-window-option -g mode-mouse on
 set-window-option -g automatic-rename off
 set-window-option -g aggressive-resize on
 set-window-option -g alternate-screen off
+set-window-option -g history-limit 5000
 
 set -g mouse-select-window on
 set -g mouse-select-pane   on
