--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ set -g status-fg colour231
 set -g status-bg colour234
 set -g status-left-length 15
 set -g status-left '#[fg=colour16,bg=colour254,bold] #S@#h #[fg=colour254,bg=colour234,nobold] '
-set -g status-right ''
+set -g status-right '#{?client_prefix,¶, }'
 set -g window-status-format "#[fg=colour244,bg=colour234]#I#[fg=colour240]#[fg=colour249]#T "
 set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I#[fg=colour231,bold]#T #[fg=colour31,bg=colour234,nobold]"
 if 'tmux set -g status-position top' 'source /dev/null'
