vim - Add scss syntax plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -218,3 +218,6 @@
 [submodule "vim/bundle/bufexplorer"]
 	path = vim/bundle/bufexplorer
 	url = https://github.com/jlanzarotta/bufexplorer.git
+[submodule "vim/bundle/syntax-scss"]
+	path = vim/bundle/syntax-scss
+	url = https://github.com/cakebaker/scss-syntax.vim.git
