tmux - Use xclip for copy on non OS X

--- a/tmux.conf
+++ b/tmux.conf
@@ -57,7 +57,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind '|' split-window -c "#{pane_current_path}" -h
 
 if '[ -c /dev/machtrace ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
-if '[ -c /dev/machtrace ]' 'bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"'
+if '[ -c /dev/machtrace ]' 'bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"' 'bind-key -t vi-copy Enter copy-pipe "xclip -in -selection clipboard"'
 if '[ -c /dev/machtrace ]' 'bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"'
 
 #new-session -s dflt
