vim - Add updated git syntax files
Use git syntax files from tpope's GitHub repo rather than the copies
included with vim.  Use the version from pull tpope/vim#31 for now to
get handling of custom setting of core.commentChar.

--- a/.gitmodules
+++ b/.gitmodules
@@ -221,3 +221,6 @@
 [submodule "vim/bundle/ctrl-space"]
 	path = vim/bundle/ctrl-space
 	url = https://github.com/szw/vim-ctrlspace.git
+[submodule "vim/bundle/git"]
+	path = vim/bundle/git
+	url = https://github.com/tpope/vim-git.git
