--- a/ssh/config
+++ b/ssh/config
@@ -47,4 +47,16 @@ ForwardAgent yes
 LocalForward localhost:5432  localhost:5432
 LocalForward localhost:61613 localhost:61613
 
+Host vagrant
+  HostName 127.0.0.1
+  Port 2222
+  UserKnownHostsFile /dev/null
+  StrictHostKeyChecking no
+  ForwardAgent yes
+# User vagrant
+# PasswordAuthentication no
+# IdentityFile /home/ats/.vagrant.d/insecure_private_key
+# IdentitiesOnly yes
+  LogLevel FATAL
+
 # vim: ft=sshconfig
