vim - Switch to personal for of vim-git plugin
Doesn't look like the PR for honoring git's commentchar config is going
to be merged anytime soon, so switch to using my own fork with that
included.

--- a/.gitmodules
+++ b/.gitmodules
@@ -226,4 +226,4 @@
 	url = https://github.com/szw/vim-ctrlspace.git
 [submodule "vim/bundle/git"]
 	path = vim/bundle/git
-	url = https://github.com/tpope/vim-git.git
+	url = https://github.com/aschrab/vim-git.git
