--- a/tmux.conf
+++ b/tmux.conf
@@ -23,15 +23,12 @@ if '[ -x /bin/zsh ]' 'set -g default-shell /bin/zsh'
 
 set-window-option -g xterm-keys on
 set-window-option -g mode-keys vi
-set-window-option -g mode-mouse on
 set-window-option -g automatic-rename off
 set-window-option -g aggressive-resize on
 set-window-option -g alternate-screen off
 set-window-option -g history-limit 5000
 
-set -g mouse-select-window on
-set -g mouse-select-pane   on
-set -g mouse-resize-pane   on
+set -g mouse on
 
 set -g repeat-time 1000
 bind-key Up    select-pane -U
@@ -57,7 +54,23 @@ bind '"' split-window -c "#{pane_current_path}"
 bind '|' split-window -c "#{pane_current_path}" -h
 
 if '[ -c /dev/machtrace ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
-if '[ -c /dev/machtrace ]' 'bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"' 'bind-key -t vi-copy Enter copy-pipe "xclip -in -selection clipboard"'
+if '[ -c /dev/machtrace ]' 'bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"' 'bind-key -t vi-copy Enter copy-pipe "xclip -in"'
 if '[ -c /dev/machtrace ]' 'bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"'
+
+unbind -T root WheelUpPane
+unbind -T root WheelDownPane
+# Do mouse wheel-up to enter copy mode and do page-up
+# https://groups.google.com/d/msg/tmux-users/XTrSVUR15Zk/3iyJLMyQ7PwJ
+# Below binding did not work
+#   bind -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'if -Ft= "#{pane_in_mode}" "copy-mode -u" "send-keys -M"' 'copy-mode -u'
+# Below works and allows the WheelUpPane binding in vi-copy table to be effective
+bind -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'send-keys -M' 'if -Ft= "#{pane_in_mode}" "send-keys -M" "copy-mode -eu"'
+
+# *** Wheel scroll in pane WHILE in copy-mode
+# Once in copy-mode, mouse wheel scrolls scrolls by half pages
+bind -t vi-copy WheelUpPane   halfpage-up
+bind -t vi-copy WheelDownPane halfpage-down
+
+if '[ -c /dev/machtrace ]' 'bind -t vi-copy MouseUp1Pane copy-pipe "reattach-to-user-namespace pbcopy"' 'bind -t vi-copy MouseUp1Pane copy-pipe "/usr/bin/xclip -in"'
 
 #new-session -s dflt
