--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ bind D confirm-before -p "Power detach?" "detach -P"
 set -g status-fg colour231
 set -g status-bg colour234
 set -g status-left-length 15
-set -g status-left '#[fg=colour16,bg=colour254,bold] #S@#h #[fg=colour254,bg=colour234,nobold] '
+set -g status-left '#[fg=colour16,bg=colour254,bold]#{=5:session_name}@#{=5:host_short}#[fg=colour254,bg=colour234,nobold] '
 set -g status-right '#{?client_prefix,¶, }'
 set -g window-status-format "#[fg=colour244,bg=colour234]#I#[fg=colour240]#[fg=colour249]#T "
 set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I#[fg=colour231,bold]#T #[fg=colour31,bg=colour234,nobold]"
