gpg - Switch to new key server network

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,9 +1,8 @@
 utf8-strings
 
 auto-key-locate keyserver
+keyserver hkp://na.pool.sks-keyservers.net
 
-#keyserver hkp://subkeys.pgp.net
-keyserver hkps://keys.stueve.us
 keyserver-options auto-key-retrieve timeout=3
 keyserver-options no-honor-keyserver-url
 keyserver-options ca-cert-file=/etc/ssl/certs/ca-certificates.crt
