gpg - Try auto finding keys via PKA
Method of advertising key locations via DNS.

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,6 +1,6 @@
 utf8-strings
 
-auto-key-locate keyserver
+auto-key-locate cert pka keyserver
 keyserver hkp://na.pool.sks-keyservers.net
 
 keyserver-options auto-key-retrieve timeout=3
