--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -16,3 +16,5 @@ default-preference-list AES AES192 AES256 TWOFISH SHA1 SHA224 SHA256 SHA384 SHA5
 personal-cipher-preferences AES256 TWOFISH AES192 AES
 personal-digest-preferences SHA512 SHA384 SHA256 SHA224
 personal-compress-preferences BZIP2 ZLIB ZIP
+
+set-notation pka-address@gnupg.org=aaron@schrab.com
