--- a/.gitmodules
+++ b/.gitmodules
@@ -239,3 +239,6 @@
 [submodule "vim/bundle/recover"]
 	path = vim/bundle/recover
 	url = https://github.com/chrisbra/Recover.vim.git
+[submodule "vim/bundle/magit"]
+	path = vim/bundle/magit
+	url = https://github.com/jreybert/vimagit.git
