ssh - No forwarding to NetApp bitbucket host
Attempting to use X forwarding to this host results in warnings. No point in
doing agent forwarding either.

--- a/ssh/config
+++ b/ssh/config
@@ -37,6 +37,10 @@ Host lish
 User qqx
 HostName lish-atlanta.linode.com
 
+Host atla-app*.netapp.com
+ForwardX11 no
+ForwardAgent no
+
 Host *.netapp.com
 ForwardX11 yes
 ForwardAgent yes
