tmux - Use `screen-256color` as default $TERM

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,7 @@ if 'tmux set -g status-position top' 'source /dev/null'
 set -g set-titles on
 set -g set-titles-string '#S:#I.#P #T'
 set -ga terminal-overrides ',gnome*:XT'
+set -g default-terminal 'screen-256color'
 if '[ -x /bin/zsh ]' 'set -g default-shell /bin/zsh'
 
 set-window-option -g xterm-keys on
