ssh - Comment out ForwardX11Timeout
Not supported on some systems, and I don't think I actually need this
anymore.

--- a/ssh/config
+++ b/ssh/config
@@ -35,7 +35,7 @@ Host *.qqx.org proxy
 User ats
 ForwardAgent yes
 ForwardX11 yes
-ForwardX11Timeout 3w
+#ForwardX11Timeout 3w
 Port 222
 
 Host *.trilug.org
