ssh - Don't set HostName for pilotvm
There are now DNS entries for pilotvm, so no longer need to configure
where to connect.

The setting is also wrong for a couple of reasons. First, the systems
have different IPv6 addresses and moya itself takes port 22 connections
on IPv6. Second, I am now seeing ssh applying the settings for moya
resulting in connections being attempted to the wrong port.

--- a/ssh/config
+++ b/ssh/config
@@ -25,8 +25,8 @@ Port 22
 Host moya.trilug.org
 Port 622
 
-Host pilotvm
-HostName moya.trilug.org
+Host pilotvm pilotvm.trilug.org
+#HostName moya.trilug.org
 HostKeyAlias pilot.trilug.org
 CheckHostIP no
 User aschrab
