ssh - Set ControlPersist
Alternate fix for tying up window with first ssh connection to a host.
This will cause the process to be backgrounded once the session
disconnects.

Remove the -M option from ssh() function for zsh.

--- a/ssh/config
+++ b/ssh/config
@@ -1,6 +1,7 @@
 HashKnownHosts no
 ControlMaster auto
 ControlPath ~/.ssh/.master.%l-%r@%h:%p
+ControlPersist 30
 #VerifyHostKeyDNS=ask
 ServerAliveInterval=120
 
