--- a/.gitmodules
+++ b/.gitmodules
@@ -241,7 +241,7 @@
 	url = https://github.com/chrisbra/Recover.vim.git
 [submodule "vim/bundle/magit"]
 	path = vim/bundle/magit
-	url = https://github.com/aschrab/vimagit.git
+	url = https://github.com/jreybert/vimagit.git
 [submodule "vim/bundle/rest-console"]
 	path = vim/bundle/rest-console
 	url = https://github.com/diepm/vim-rest-console.git
