--- a/.gitmodules
+++ b/.gitmodules
@@ -251,3 +251,6 @@
 [submodule "vim/bundle/xmledit"]
 	path = vim/bundle/xmledit
 	url = gh:sukima/xmledit.git
+[submodule "vim/bundle/syntax-typescript"]
+	path = vim/bundle/syntax-typescript
+	url = https://github.com/leafgarland/typescript-vim.git
