--- a/.gitmodules
+++ b/.gitmodules
@@ -254,3 +254,9 @@
 [submodule "vim/bundle/syntax-typescript"]
 	path = vim/bundle/syntax-typescript
 	url = https://github.com/leafgarland/typescript-vim.git
+[submodule "vim/bundle/tsuquyomi"]
+	path = vim/bundle/tsuquyomi
+	url = https://github.com/Quramy/tsuquyomi.git
+[submodule "vim/bundle/vimproc"]
+	path = vim/bundle/vimproc
+	url = https://github.com/Shougo/vimproc.vim.git
