--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/aschrab/vim-markdown.git
 [submodule "vim/bundle/css-color"]
 	path = vim/bundle/css-color
-	url = https://github.com/skammer/vim-css-color.git
+	url = https://github.com/ap/vim-css-color.git
 [submodule "vim/bundle/pathogen"]
 	path = vim/bundle/pathogen
 	url = https://github.com/tpope/vim-pathogen.git
