git - Move global ignore file into ~/.config/git
Cleanup home directory, and work better when setting $XDG_CONFIG_HOME
from a different user.

--- a/config/git/config
+++ b/config/git/config
@@ -40,7 +40,7 @@
 	pager        = less -R
 	#autocrlf    = input
 	safecrlf     = true
-	excludesfile = ~/.gitignore
+	#excludesfile = ~/.gitignore
 	preloadindex = yes
 	commentChar  = !
 
