gpg - Disable auto key retrieval
Often causes delays when opening messages in mutt. And a signature on an
unknown key isn't likely to mean anything anyway.

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -4,7 +4,7 @@ keyid-format long
 auto-key-locate cert pka keyserver
 keyserver hkp://na.pool.sks-keyservers.net
 
-keyserver-options auto-key-retrieve timeout=3
+#keyserver-options auto-key-retrieve timeout=3
 keyserver-options no-honor-keyserver-url
 keyserver-options ca-cert-file=/etc/ssl/certs/ca-certificates.crt
 
