git - Add gitv alias
Create an alias to startup vim in with the gitv plugin.

--- a/config/git/config
+++ b/config/git/config
@@ -74,6 +74,8 @@
 [alias]
 	g           = "!f() { git $@; }; f"
 	git         = "!f() { git $@; }; f"
+	v           = "!git gitv"
+	gitv        = "!f() { vim $(git rev-parse --git-dir)/index -c \":Gitv $@\" -c ':tabclose 1'; }; f"
 	root        = rev-parse --show-toplevel
 	co          = checkout
 	ci          = commit -v
