vim - Add dispatch plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -260,3 +260,9 @@
 [submodule "vim/bundle/vimproc"]
 	path = vim/bundle/vimproc
 	url = https://github.com/Shougo/vimproc.vim.git
+[submodule "vim/bundle/dispatch"]
+	path = vim/bundle/dispatch
+	url = https://github.com/tpope/vim-dispatch.git
+[submodule "vim/bundle/dispatch-neovim"]
+	path = vim/bundle/dispatch-neovim
+	url = https://github.com/radenling/vim-dispatch-neovim.git
