--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,7 @@ set -g set-titles on
 set -g set-titles-string '#S:#I.#P #T'
 set -ga terminal-overrides ',gnome*:XT'
 set -g default-terminal 'screen-256color'
+set-option -sg escape-time 10
 if '[ -x /bin/zsh ]' 'set -g default-shell /bin/zsh'
 
 set-window-option -g xterm-keys on
