git - Modify `id` alias

--- a/config/git/config
+++ b/config/git/config
@@ -80,7 +80,7 @@
 	d           = diff
 	dif         = diff
 	ds          = diff --staged
-	id          = log -1 --format=%h
+	id          = log --no-walk --format=%h
 	sh          = show
 	sho         = show
 	st          = status -sb
