--- a/ssh/config
+++ b/ssh/config
@@ -1,6 +1,6 @@
 HashKnownHosts no
 ControlMaster auto
-ControlPath ~/.ssh/.master.%l-%r@%h:%p
+ControlPath ~/.ssh/.master.%r@%h:%p
 ControlPersist 30
 #VerifyHostKeyDNS=ask
 ServerAliveInterval=5
