--- a/ssh/config
+++ b/ssh/config
@@ -71,4 +71,10 @@ Host vagrant
 # IdentitiesOnly yes
   LogLevel FATAL
 
+Host niq-aaron
+  HostName durrhc1sn02-stg.corp.netapp.com
+  Port 4030
+  User netappiq
+  ForwardAgent yes
+
 # vim: ft=sshconfig
