vim - add `ale` plugin
Alternative to syntastic using features from newer versions of vim/nvim.
Ensure that this and syntastic aren't both enabled at the same time.

--- a/.gitmodules
+++ b/.gitmodules
@@ -269,3 +269,6 @@
 [submodule "vim/bundle/tern"]
 	path = vim/bundle/tern
 	url = https://github.com/ternjs/tern_for_vim.git
+[submodule "vim/bundle/ale"]
+	path = vim/bundle/ale
+	url = https://github.com/w0rp/ale.git
