tmux - Use `clipboard` script for copy/paste
This allows delegating decision to use X or Mac clipboard.

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,8 +55,8 @@ bind '"' split-window -c "#{pane_current_path}"
 bind '|' split-window -c "#{pane_current_path}" -h
 
 if '[ -c /dev/machtrace ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
-if '[ -c /dev/machtrace ]' 'bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"' 'bind-key -t vi-copy Enter copy-pipe "xclip -in"'
-if '[ -c /dev/machtrace ]' 'bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"'
+bind -t vi-copy Enter copy-pipe "clipboard copy"
+bind ']' run "clipboard paste | tmux load-buffer - && tmux paste-buffer"
 
 unbind -T root WheelUpPane
 unbind -T root WheelDownPane
@@ -72,6 +72,6 @@ bind -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'send-keys -M' 'if -Ft= "#{
 bind -t vi-copy WheelUpPane   halfpage-up
 bind -t vi-copy WheelDownPane halfpage-down
 
-if '[ -c /dev/machtrace ]' 'bind -t vi-copy MouseUp1Pane copy-pipe "reattach-to-user-namespace pbcopy"' 'bind -t vi-copy MouseUp1Pane copy-pipe "/usr/bin/xclip -in"'
+bind -t vi-copy MouseUp1Pane copy-pipe "clipboard copy"
 
 #new-session -s dflt
