tmux - Version specific configs for 2.3, 2.4

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,8 +55,6 @@ bind '"' split-window -c "#{pane_current_path}"
 bind '|' split-window -c "#{pane_current_path}" -h
 
 if '[ -c /dev/machtrace ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
-bind -t vi-copy Enter copy-pipe "clipboard copy"
-bind ']' run "clipboard paste | tmux load-buffer - && tmux paste-buffer"
 
 unbind -T root WheelUpPane
 unbind -T root WheelDownPane
@@ -67,11 +65,6 @@ unbind -T root WheelDownPane
 # Below works and allows the WheelUpPane binding in vi-copy table to be effective
 bind -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'send-keys -M' 'if -Ft= "#{pane_in_mode}" "send-keys -M" "copy-mode -eu"'
 
-# *** Wheel scroll in pane WHILE in copy-mode
-# Once in copy-mode, mouse wheel scrolls scrolls by half pages
-bind -t vi-copy WheelUpPane   halfpage-up
-bind -t vi-copy WheelDownPane halfpage-down
-
-bind -t vi-copy MouseUp1Pane copy-pipe "clipboard copy"
+run 'tmux_conf="${XDG_CONFIG_HOME:-$HOME/.config}/tmux/$(tmux -V | tr -d \ ).conf"; [ -r $tmux_conf ] && tmux source $tmux_conf || :'
 
 #new-session -s dflt
