--- a/ssh/config
+++ b/ssh/config
@@ -79,6 +79,7 @@ Host niq-aaron
   ForwardAgent yes
   ForwardX11 yes
   ForwardX11Trusted yes
+  LocalForward localhost:3000 0:3000
   LocalForward localhost:5000 0:5000
 
 Host datalakegw
