tmux - Create conf file for generic 2.x versions

--- a/config/tmux/tmux2.4.conf
+++ b/config/tmux/tmux2.4.conf
@@ -1,3 +1,7 @@
+# vim: ft=tmux
+
+run 'tmux source ${XDG_CONFIG_HOME:-$HOME/.config}/tmux/tmux2.x.conf'
+
 bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "clipboard copy"
 bind ']' run "clipboard paste | tmux load-buffer - && tmux paste-buffer"
 
