--- a/config/tmux/tmux2.3.conf
+++ b/config/tmux/tmux2.3.conf
@@ -1,3 +1,6 @@
+# vim: ft=tmux
+
+run 'tmux source ${XDG_CONFIG_HOME:-$HOME/.config}/tmux/tmux2.x.conf'
 
 bind -t vi-copy Enter copy-pipe "clipboard copy"
 bind ']' run "clipboard paste | tmux load-buffer - && tmux paste-buffer"
