--- a/.gitmodules
+++ b/.gitmodules
@@ -275,3 +275,6 @@
 [submodule "vim/bundle/deoplete"]
 	path = vim/bundle/deoplete
 	url = https://github.com/Shougo/deoplete.nvim.git
+[submodule "vim/bundle/snippets"]
+	path = vim/bundle/snippets
+	url = gh:honza/vim-snippets
