vim - Add autoread plugin
Get the 'autoread' option in terminal to work more like it does in GUI.

--- a/.gitmodules
+++ b/.gitmodules
@@ -278,3 +278,6 @@
 [submodule "vim/bundle/snippets"]
 	path = vim/bundle/snippets
 	url = gh:honza/vim-snippets
+[submodule "vim/bundle/autoread"]
+	path = vim/bundle/autoread
+	url = https://github.com/djoshea/vim-autoread.git
