--- a/config/git/config
+++ b/config/git/config
@@ -1,4 +1,4 @@
-# vim: ft=gitconfig tabstop=4 shiftwidth=4
+# vim: ft=gitconfig tabstop=4 shiftwidth=4 noexpandtab
 [core]
 	pager        = less -R
 	#autocrlf    = input
@@ -47,6 +47,7 @@
 [rebase]
 	autosquash = true
 	missingCommitsCheck = error
+	instructionFormat = "[%aN] %s"
 [push]
 	default = current
 
