--- a/ssh/config
+++ b/ssh/config
@@ -82,6 +82,16 @@ Host niq-aaron
   LocalForward localhost:3000 0:3000
   LocalForward localhost:5000 0:5000
 
+Host niq-build
+  HostName durrhc1sn02-stg.corp.netapp.com
+  Port 3222
+  User netappiq
+
+Host niq-build-host
+  HostName durrhc1sn02-stg.corp.netapp.com
+  ForwardX11 yes
+  ForwardX11Trusted yes
+
 Host datalakegw
   HostName phyrhcgws01-prd.corp.netapp.com
 
