--- a/eslintrc.yml
+++ b/eslintrc.yml
@@ -2,20 +2,12 @@ env:
   browser: true
   es6: true
   node: true
-extends: 'eslint:recommended'
+extends: standard
 parserOptions:
-  sourceType: module
+  sourceType: script
 rules:
-  indent:
-    - error
-    - 2
   linebreak-style:
     - error
     - unix
-  quotes:
+  default-case:
     - error
-    - single
-  semi:
-    - error
-    - never
-  no-console:
