--- a/config/git/config
+++ b/config/git/config
@@ -104,7 +104,7 @@
 	push-new-repo = push --receive-pack=git-receive-new-repo --all
 	submodule-annotate = submodule foreach 'git update-ref --create-reflog -m \"Update from parent repo\" refs/heads/submodule-parent $sha1 || true'
 	wtree = worktree
-	recent = "for-each-ref --count=10 --sort=-committerdate refs/heads --format='%(color:blue)%(align:16)[%(committerdate:relative)]%(end)%(color:reset) %(refname:short)'"
+	recent = "for-each-ref --count=10 --sort=-committerdate refs/heads --format='%(color:blue)%(align:16)[%(committerdate:relative)]%(end)%(color:reset) %(HEAD) %(align:20)%(refname:short)%(end) %(color:yellow)%(subject)%(color:reset)'"
 
 [filter "date-prop"]
 	clean  = perl -pe 's/,,Date[^,]*,,/,,Date,,/i'
