git - alias `ad` to `add`
Only recall typoing this once, but seems an obvious improvement.

--- a/config/git/config
+++ b/config/git/config
@@ -78,6 +78,7 @@
 	co          = checkout
 	ci          = commit -v
 	cia         = commit -v -a
+	ad          = add
 	d           = diff
 	dif         = diff
 	difff       = diff
