--- a/.gitmodules
+++ b/.gitmodules
@@ -71,9 +71,6 @@
 [submodule "vim/bundle/gundo"]
 	path = vim/bundle/gundo
 	url = https://github.com/simnalamburt/vim-mundo.git
-[submodule "vim/bundle/SudoEdit"]
-	path = vim/bundle/SudoEdit
-	url = https://github.com/chrisbra/SudoEdit.vim.git
 [submodule "vim/bundle/CamelCaseMotion"]
 	path = vim/bundle/CamelCaseMotion
 	url = https://github.com/bkad/CamelCaseMotion.git
@@ -287,3 +284,6 @@
 [submodule "vim/bundle/characterize"]
 	path = vim/bundle/characterize
 	url = https://github.com/tpope/vim-characterize.git
+[submodule "vim/bundle/eunuch"]
+	path = vim/bundle/eunuch
+	url = https://github.com/tpope/vim-eunuch.git
