ssh - Config for new dev host at work
Using a qqx.org name for this since the assigned one is insanely long,
but don't want some of the usual settings for that domain.

--- a/ssh/config
+++ b/ssh/config
@@ -6,6 +6,10 @@ ControlPersist 30
 ServerAliveInterval=5
 AddKeysToAgent yes
 
+Host niq.qqx.org
+Port 22
+User aschrab
+
 Host pug.qqx.org proxy
 #ControlMaster auto
 #Port 443
