--- a/tmux.conf
+++ b/tmux.conf
@@ -60,6 +60,6 @@ if '[ -c /dev/machtrace ]' 'set-option -g default-command "reattach-to-user-name
 #   bind -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'if -Ft= "#{pane_in_mode}" "copy-mode -u" "send-keys -M"' 'copy-mode -u'
 # Below works and allows the WheelUpPane binding in vi-copy table to be effective
 
-run 'tmux_conf="${XDG_CONFIG_HOME:-$HOME/.config}/tmux/$(tmux -V | tr -d \ ).conf"; [ -r $tmux_conf ] && tmux source $tmux_conf || :'
+run 'tmux_conf="${XDG_CONFIG_HOME:-$HOME/.config}"/tmux/$(tmux -V | sed -e "s/ //" -e "s/-.*//").conf; [ -r $tmux_conf ] && tmux source $tmux_conf || :'
 
 #new-session -s dflt
