--- a/config/git/config
+++ b/config/git/config
@@ -112,6 +112,7 @@
 	review      = "!f() { for rev in $(git log --reverse --format=%H $@); do git show $rev; done; }; f"
 	show-commit = log -1 -p
 	lol         = log --graph --decorate --pretty=oneline --abbrev-commit
+	puhs        = push
 	push-new-repo = push --receive-pack=git-receive-new-repo --all
 	submodule-annotate = submodule foreach 'git update-ref --create-reflog -m \"Update from parent repo\" refs/heads/submodule-parent $sha1 || true'
 	wtree = worktree
