--- a/config/git/config
+++ b/config/git/config
@@ -172,3 +172,5 @@
 	insteadOf = http://github.com/
 [url "git@bitbucket.org:aschrab/"]
 	pushInsteadOf = https://bitbucket.org/aschrab/
+[url "ssh://git@ngage.netapp.com:7999/"]
+	insteadOf = https://ngage.netapp.com/stash/scm/
