git - pushInsteadOf config for gitlab

--- a/config/git/config
+++ b/config/git/config
@@ -172,5 +172,7 @@
 	insteadOf = http://github.com/
 [url "git@bitbucket.org:aschrab/"]
 	pushInsteadOf = https://bitbucket.org/aschrab/
+[url "git@gitlab.com:aschrab/"]
+	pushInsteadOf = https://gitlab.com/aschrab/
 [url "ssh://git@ngage.netapp.com:7999/"]
 	insteadOf = https://ngage.netapp.com/stash/scm/
