tmux - new shell bindings for 2.x

--- a/config/tmux/tmux2.x.conf
+++ b/config/tmux/tmux2.x.conf
@@ -8,3 +8,7 @@ unbind -T root WheelUpPane
 unbind -T root WheelDownPane
 
 bind -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'send-keys -M' 'if -Ft= "#{pane_in_mode}" "send-keys -M" "copy-mode -eu"'
+
+bind -T prefix 'c' new-window   -c "#{pane_current_path}"
+bind -T prefix '"' split-window -c "#{pane_current_path}"
+bind -T prefix '|' split-window -c "#{pane_current_path}" -h
