--- a/config/git/config
+++ b/config/git/config
@@ -100,7 +100,7 @@
 	b           = branch
 	pick        = cherry-pick
 	up          = "!echo Use pull >&2 ; exit 1"
-	ff          = pull --ff-only
+	ff          = merge --ff-only
 	l1          = log --pretty=format:"'%C(yellow)%h %>(15,trunc)%C(green)%aN %<(12)%C(blue)%ar %C(reset)%<(70,trunc)%s'"
 	ls          = log --decorate --graph --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]"
 	ll          = log --decorate --numstat --date=short --pretty=format:"%C(yellow)%ad\\ %h%Cred%d\\ %Creset%s%Cblue\\ [%cn]"
