git - Add `fixup` subcommand
Provide help for creating `fixup!` and `squash!` commits.

--- a/.gitmodules
+++ b/.gitmodules
@@ -256,3 +256,6 @@
 [submodule "upstreams/fira_code"]
 	path = upstreams/fira_code
 	url = https://github.com/tonsky/FiraCode.git
+[submodule "upstreams/git-fixup"]
+	path = upstreams/git-fixup
+	url = https://github.com/keis/git-fixup.git
